[package]
name = "club-rs"
authors = [
    "Faiz Surani <faiz@faizsurani.com>"
]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
serde_json = "1.0.114"

[[bin]]
name = "club"
path = "src/main.rs"
